# fedusivaio

./: .gitignore  CMakeLists.txt  Readme.md  manual_build.sh  sdkconfig  sdkconfig.defaults
components/ili9341/: CMakeLists.txt
components/ili9486/: CMakeLists.txt  ili9486.c  ili9486.h
main/: CMakeLists.txt  audio_config.h  audio_module.c  audio_module.h  common.h  display.c  gpio_config.h  main.c  op_codes.h  system_message.c  system_message.h  timer.c  timer.h  types.h  user_input.c  user_input.h
main/app/: app_manager.c  app_manager.h  system_message.c  system_message.h
main/audio/: audio_config.h  audio_hw.c  audio_hw.h  audio_module.c  sound_adsr.c  sound_adsr.h  sound_engine.c  sound_engine.h  sound_osc.c  sound_osc.h
main/display/: display.c  display.h  display_config.h  gui_types.h  ili9341.c  ili9341.h
main/memory/: memory_manager.c  memory_manager.h
src/: config.h  display.c  display.h  main.c
